// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcTableFooter should render with footer slot 1`] = `
<tfoot
  class="ec-table-footer"
  data-test="ec-table-footer"
>
  <tr>
    <td
      class="ec-table-footer__cell"
    >
      <div
        class="ec-table-footer__contents"
      >
        <p>
          Random text
        </p>
      </div>
    </td>
  </tr>
</tfoot>
`;

exports[`EcTableFooter should render without footer slot 1`] = `
<tfoot
  class="ec-table-footer"
  data-test="ec-table-footer"
>
  <tr>
    <td
      class="ec-table-footer__cell"
    >
      <div
        class="ec-table-footer__contents"
      />
    </td>
  </tr>
</tfoot>
`;
